--- a/src/containers/Header/Header.styles.css
+++ b/src/containers/Header/Header.styles.css
@@ -78,6 +78,42 @@
   display: none;
 }
 
+.floating-container {
+  width: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
+  z-index: 9;
+  color: #fff;
+  bottom: 25px;
+  right: 25px;
+}
+.floating-button {
+  display: flex;
+  align-items: center;
+  background-color: #25d366;
+  width: 100%;
+  max-width: 250px !important;
+  padding: 0 20px;
+  border-radius: 10px;
+  gap: 5px;
+  animation-name: float;
+  animation-timing-function: ease-in;
+  animation-iteration-count: infinite;
+  animation-duration: 1s;
+}
+
+@keyframes float {
+  100% {
+    transform: scale(1.05);
+  }
+}
+
+.floating-button svg {
+  color: #fff;
+}
+
 @media only screen and (max-width: 1200px) {
   .navigation-container,
   .logo-container {
@@ -106,6 +142,13 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .floating-container {
+    justify-content: center;
+    right: 0 !important;
+  }
+  .floating-button {
+    max-width: 230px !important;
+  }
   .header-top {
     display: flex;
     justify-content: flex-end;
